--- a/views/index.html
+++ b/views/index.html
@@ -5,10 +5,26 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>MUSIC</title>
 	<link rel="stylesheet" href="">
+	<style>
+	body{
+		color: red;
+	}
+audio {
+ background-color: green;
+}
+
+
+
+
+
+	</style>
 </head>
 <body>
 <h1> Music App </h1>
 
+<audio class ="bla" src="http://developer.mozilla.org/@api/deki/files/2926/=AudioTest_(1).ogg" controls autoplay>	
+<p>Fallback content goes here.</p>
+</audio>
 
 <script src="https://d3js.org/d3.v4.js"></script>
 </body>
