researh and more research

--- a/views/index.html
+++ b/views/index.html
@@ -9,9 +9,11 @@
 	body{
 		color: red;
 	}
-audio {
- background-color: green;
-}
+
+	audio::-webkit-media-controls-play-button {
+	  width: 800px;
+    background-color: rgba(230, 230, 255, 1);
+	}
 
 
 
@@ -20,9 +22,9 @@ audio {
 	</style>
 </head>
 <body>
-<h1> Music App </h1>
+<h1>MA</h1>
 
-<audio class ="bla" src="http://developer.mozilla.org/@api/deki/files/2926/=AudioTest_(1).ogg" controls autoplay>	
+<audio class ="bla" src="http://developer.mozilla.org/@api/deki/files/2926/=AudioTest_(1).ogg" controls >	
 <p>Fallback content goes here.</p>
 </audio>
 
